D-39256 increasing width of sweepstakes text box to prevent three-line wrapping.

--- a/public/styles/projects/makeup-date/fall-2016-tutorial/styles.scss
+++ b/public/styles/projects/makeup-date/fall-2016-tutorial/styles.scss
@@ -671,8 +671,8 @@ section a:active {
 		position: absolute;
 		text-align: center;
 		top: 18%;
-		left: 25%;
-		width: 50%;
+		left: 23%;
+		width: 55%;
 
 		h2 {
 			font-size: 1.6em;
